[package]
name = "minijam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
bevy_ecs_tilemap = { version = "0.6", git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
ldtk_rust = "0.5"
serde_json = "1.0"
anyhow = "1.0"
